--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
     <div class="featured__container ">
       <h2 class="visually-hidden">Описание</h2>
       <div class="featured__product product">
-        <h3 class="product__title heading heading--level_2">Вязаные корзинки</h3>
+        <h3 class="product__title heading">Вязаные корзинки</h3>
         <span class="product__label card-label">Товар недели</span>
         <div class="product__description-container">
           <p class="product__description">
@@ -52,7 +52,7 @@
   </section>
   <section class="about">
     <div class="about__container page__centerer">
-      <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
+      <h2 class="about__title heading heading">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
           <span class="advantage__text advantage__text--icon_flower">Экологически чистые материалы</span>
@@ -77,7 +77,7 @@
   </section>
   <section class="reviews line-decor line-decor--bottom">
     <div class="reviews__container page__centerer">
-      <h2 class="reviews__title heading heading--level_2">Отзывы</h2>
+      <h2 class="reviews__title heading heading">Отзывы</h2>
       <figure class="reviews__quote quote">
         <blockquote class="quote__text">
           Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных
@@ -87,7 +87,6 @@
         <figcaption class="quote__author author">Анастасия Красильникова <span
             class="author__id author-id">@misssssiskras</span></figcaption>
       </figure>
-      <p class="reviews__buttons button-reviews">
       <div class="reviews__slider slider-reviews">
         <button class=" reviews__previous button" type="button">
           <span class="visually-hidden">Предыдущий отзыв</span>
@@ -97,17 +96,16 @@
         </button>
       </div>
       <a class="reviews__write button" href="#">Написать</a>
-      </p>
     </div>
   </section>
   <article class="contacts">
-    <h2 class="contacts__title contacts__container page__centerer">Контакты</h2>
+    <h2 class="contacts__title heading contacts__container page__centerer">Контакты</h2>
     <address class="contacts__address address contacts__container page__centerer">
-      <dl class="contacts__list">
+      <dl class="address__list">
         <dt class="address__email">e-mail:</dt>
-        <dd><a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
+        <dd class="address__content address__content--email"><a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
         <dt class="address__title">адрес:</dt>
-        <dd class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</dd>
+        <dd class="address__content address__content--address">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</dd>
       </dl>
     </address>
     <div class="contacts__map">
