добавляет сетки reviews

--- a/source/index.html
+++ b/source/index.html
@@ -88,14 +88,14 @@
             class="author__id author-id">@misssssiskras</span></figcaption>
       </figure>
       <div class="reviews__slider slider-reviews">
-        <button class=" reviews__previous button" type="button">
+        <button class=" slider-reviews__previous" type="button">
           <span class="visually-hidden">Предыдущий отзыв</span>
         </button>
-        <button class="reviews__next button" type="button">
+        <button class="slider-reviews__next" type="button">
           <span class="visually-hidden">Следующий отзыв</span>
         </button>
       </div>
-      <a class="reviews__write button" href="#">Написать</a>
+      <a class="reviews__write button button--size_wide" href="#">Написать</a>
     </div>
   </section>
   <article class="contacts">
