--- a/source/index.html
+++ b/source/index.html
@@ -30,12 +30,12 @@
             Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.
           </p>
           <dl class="product__list product-specification">
-            <dt class="product__item">Цвет:</dt>
-            <dd class="product__specification">иффани/серый</dd>
-            <dt class="product__item">Диаметр:</dt>
-            <dd class="product__specification">25 см</dd>
-            <dt class="product__item">Высота:</dt>
-            <dd class="product__specification">15 см</dd>
+            <dt class="product-specification__item">Цвет:</dt>
+            <dd class="product-specification__specification">иффани/серый</dd>
+            <dt class="product-specification__item">Диаметр:</dt>
+            <dd class="product-specification__specification">25 см</dd>
+            <dt class="product-specification__item">Высота:</dt>
+            <dd class="product-specification__specification">15 см</dd>
           </dl>
         </div>
         <img class="product__image" src="img/basket-mobile.jpg" width="260" height="315"
@@ -45,7 +45,7 @@
             <dt class="product-price__description">Цена:</dt>
             <dd class="product-price__number">990 руб.</dd>
           </dl>
-          <a class="product__button button" href="form.html">Заказать</a>
+          <a class="product__button button button--size_wide" href="form.html">Заказать</a>
         </div>
       </div>
     </div>
