--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,14 @@
 <main class="main-container">
   <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
   <section class="products">
-    <h2 class="products__title heading page__centerer">Милые штуки ручной работы для дома</h2>
+    <h2 class="products__title heading page__centerer">Милые штуки ручной <br> работы для дома</h2>
     <div class="page__centerer page__centerer--desktop_on">
       <ul class="products__list products-list ">
         <li class="products-list__item">
-          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы<br> интерьера</a>
+          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы <br> интерьера</a>
         </li>
         <li class="products-list__item">
-          <a class="products-list__link products-list__link--icon_toy" href="#">Детские<br> игрушки</a>
+          <a class="products-list__link products-list__link--icon_toy" href="#">Детские <br> игрушки</a>
         </li>
       </ul>
     </div>
