борьба с line-decore

--- a/source/index.html
+++ b/source/index.html
@@ -19,8 +19,8 @@
       </ul>
     </div>
   </section>
-  <section class="featured line-decor line-decor--bottom">
-    <div class="featured__container  page__centerer">
+  <section class="featured">
+    <div class="featured__container  page__centerer line-decor--bottom">
       <h2 class="visually-hidden">Описание</h2>
       <div class="featured__product product">
         <h3 class="product__title heading">Вязаные корзинки</h3>
