--- a/source/index.html
+++ b/source/index.html
@@ -38,12 +38,16 @@
             <dd class="product-specification__specification">15 см</dd>
           </dl>
         </div>
-        <picture>
-          <source media="(min-width: 1150px)" srcset="./img/triple-set-desktop@1x.jpg 1x, ./img/triple-set-desktop@2x.jpg 2x">
-          <source media="(min-width:768px)" srcset="./img/triple-set-tablet@1x.jpg 1x, ./img/triple-set-tablet@2x.jpg 2x">
-          <img class="product__image" src="./img/triple-set-mobile@1x.jpg" srcset="./img/triple-set-mobile@2x.jpg 2x"
-            width="260" height="315" alt="Набор из трёх вязанных корзинок.">
-        </picture>
+        <div class="product__image-wrapper">
+          <picture>
+            <source media="(min-width: 1150px)"
+              srcset="./img/triple-set-desktop@1x.jpg 1x, ./img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width:768px)"
+              srcset="./img/triple-set-tablet@1x.jpg 1x, ./img/triple-set-tablet@2x.jpg 2x">
+            <img class="product__image" src="./img/triple-set-mobile@1x.jpg" srcset="./img/triple-set-mobile@2x.jpg 2x"
+              width="260" height="315" alt="Набор из трёх вязанных корзинок.">
+          </picture>
+        </div>
         <div class="product__price-container">
           <dl class="product__price product-price">
             <dt class="product-price__description">Цена:</dt>
