--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,8 +26,7 @@
                 корзину</span></button>
           </p>
         </div>
-        <a class="card-product__image" href="#"><img src="img/catalog/bunny-mobile.jpg" width="260" height="195"
-            alt="Вязанный зайчик-попрыгайчик голубого цвета."></a>
+        <a class="card-product__image" href="#">{% include "./templates/picture.twig" with {name: "catalog/bunny", class: ""} %}</a>
       </li>
       <li class="catalog-products__item card-product">
         <div class="description-wrapper">
@@ -46,8 +45,7 @@
                 корзину</span></button>
           </p>
         </div>
-        <a class="card-product__image" href="#"><img src="img/catalog/laundry-basket-mobile.jpg" width="260"
-            height="195" alt="Вязанная корзина наполненная полотенцами."></a>
+        <a class="card-product__image" href="#">{% include "./templates/picture.twig" with {name: "catalog/laundry-basket", class: ""} %}</a>
       </li>
       <li class="catalog-products__item card-product">
         <div class="description-wrapper">
@@ -66,8 +64,7 @@
                 корзину</span></button>
           </p>
         </div>
-        <a class="card-product__image" href="#"><img src="img/catalog/toy-basket-mobile.jpg" width="260" height="195"
-            alt="Вязанная корзина наполненная мягкими игрушками."></a>
+        <a class="card-product__image" href="#">{% include "./templates/picture.twig" with {name: "catalog/toy-basket", class: ""} %}</a>
       </li>
     </ul>
   </section>
@@ -79,7 +76,7 @@
           том, как появляются наши товары.</span>
         <a class="production-container__button button button--size_wide" href="#">Сделать заказ</a>
       <div class="production-container__video preview">
-        <img class="preview__image" src="img/catalog/video-mobile.jpg" alt="Тут должно быть интересное видео.">
+        {% include "./templates/picture.twig" with {name: "catalog/video", class: "preview__image"} %}
         <button class="preview__button" type="button"></button>
       </div>
     </div>
