--- a/source/index.html
+++ b/source/index.html
@@ -39,14 +39,7 @@
           </dl>
         </div>
         <div class="product__image-wrapper">
-          <picture>
-            <source media="(min-width: 1150px)"
-              srcset="./img/triple-set-desktop@1x.jpg 1x, ./img/triple-set-desktop@2x.jpg 2x">
-            <source media="(min-width:768px)"
-              srcset="./img/triple-set-tablet@1x.jpg 1x, ./img/triple-set-tablet@2x.jpg 2x">
-            <img class="product__image" src="./img/triple-set-mobile@1x.jpg" srcset="./img/triple-set-mobile@2x.jpg 2x"
-              width="260" height="315" alt="Набор из трёх вязанных корзинок.">
-          </picture>
+         {% include "./templates/picture.twig" with {name: "triple-set", class: "product__image"} %}
         </div>
         <div class="product__price-container">
           <dl class="product__price product-price">
