добавляет иконки iframe-map

--- a/source/index.html
+++ b/source/index.html
@@ -112,8 +112,7 @@
       </dl>
     </address>
     <div class="contacts__map">
-      <script defer
-        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+      <iframe class="contacts__map-iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A56943108656d57f1b1e594684afc21aa73ea50ce63662cf152f8f68469f84417&amp;source=constructor"></iframe>
     </div>
     <div class="contacts__button-wrapper contacts__container">
       <button class="contacts__button button button--size_wide contacts__container " type="button">Напишите нам</button>
