--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
     </div>
   </section>
   <article class="contacts">
-    <h2 class="contacts__title heading contacts__container page__centerer">Контакты</h2>
+    <h2 class="contacts__title heading">Контакты</h2>
     <address class="contacts__address address contacts__container page__centerer">
       <dl class="address__list">
         <dt class="address__email">e-mail:</dt>
