добавляет декор form icon footer

--- a/source/index.html
+++ b/source/index.html
@@ -112,8 +112,10 @@
       </dl>
     </address>
     <div class="contacts__map">
-      <iframe class="contacts__map--active" src="https://yandex.ru/map-widget/v1/?um=constructor%3A56943108656d57f1b1e594684afc21aa73ea50ce63662cf152f8f68469f84417&amp;source=constructor"></iframe>
-      <noscript class="contacts__map--passive">{% include "./templates/picture.twig" with {name: "map", class: "image-content image-content--cover"} %}</noscript>
+      <iframe class="contacts__map--active"
+        src="https://yandex.ru/map-widget/v1/?um=constructor%3A56943108656d57f1b1e594684afc21aa73ea50ce63662cf152f8f68469f84417&amp;source=constructor"></iframe>
+      <noscript class="contacts__map--passive">{% include "./templates/picture.twig" with {name: "map", class:
+        "image-content image-content--cover"} %}</noscript>
     </div>
     <div class="contacts__button-wrapper contacts__container page__centerer">
       <button class="contacts__button button button--size_wide contacts__container " type="button">Напишите нам</button>
