PP index tablet

--- a/source/index.html
+++ b/source/index.html
@@ -56,22 +56,22 @@
       <h2 class="about__title heading heading">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item advantage__item--icon_flower">
-          Экологически чистые материалы
+          Экологически <br> чистые материалы
         </li>
         <li class="advantage__item advantage__item--icon_clew">
-          <span class="advantage__text">Связано вручную с любовью и умилением</span>
+          <span class="advantage__text">Связано вручную <br> с любовью и умилением</span>
         </li>
         <li class="advantage__item advantage__item--icon_banknote">
-          <span class="advantage__text">Скандинавский стиль по российской цене</span>
+          <span class="advantage__text">Скандинавский стиль <br> по российской цене</span>
         </li>
         <li class="advantage__item advantage__item--icon_rocket">
           <span class="advantage__text">Поддержка отечественного производителя</span>
         </li>
         <li class="advantage__item advantage__item--icon_heart">
-          <span class="advantage__text">Увеличивает лайки на фотографиях</span>
+          <span class="advantage__text">Увеличивает лайки <br> на фотографиях</span>
         </li>
         <li class="advantage__item advantage__item--icon_gift-wrap">
-          <span class="advantage__text">Поставляется в подарочной упаковке</span>
+          <span class="advantage__text">Поставляется <br> в подарочной упаковке</span>
         </li>
       </ul>
     </div>
@@ -107,7 +107,7 @@
         <dd class="address__content address__content--email"><a class="address__link link-address"
             href="info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
         <dt class="address__title">адрес:</dt>
-        <dd class="address__content address__content--address">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101
+        <dd class="address__content address__content--address">г. Санкт-Петербург <br> ул. Большая Конюшеннаяд. <br> д. 19/8, офис 101
         </dd>
       </dl>
     </address>
