добавляет PP for catalog-mob

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -78,7 +78,7 @@
         для вас
         подробное видео о
         том, как появляются наши товары.</span>
-      <a class="production-container__button button button--size_wide" href="#">Сделать заказ</a>
+      <a class="production-container__button button" href="#">Сделать заказ</a>
       <div class="production-container__video preview">
         <div class="preview__image">
           {% include "./templates/picture.twig" with {name: "catalog/video", class: "image-content"} %}
