--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
     </div>
   </section>
   <section class="featured">
-    <div class="featured__container  page__centerer line-decor--bottom">
+    <div class="featured__container  page__centerer line-decor line-decor--bottom">
       <h2 class="visually-hidden">Описание</h2>
       <div class="featured__product product">
         <h3 class="product__title heading">Вязаные корзинки</h3>
@@ -112,7 +112,7 @@
       </dl>
     </address>
     <div class="contacts__map">
-      <iframe class="contacts__map--active"
+      <iframe class="contacts__map contacts__map--active"
         src="https://yandex.ru/map-widget/v1/?um=constructor%3A56943108656d57f1b1e594684afc21aa73ea50ce63662cf152f8f68469f84417&amp;source=constructor"></iframe>
       <noscript class="contacts__map--passive">{% include "./templates/picture.twig" with {name: "map", class:
         "image-content image-content--cover"} %}</noscript>
